--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
 <head>
-  <title>HighSchoolPrograms</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
+
+	<%= stylesheet_link_tag    "application" %>
+	<%= javascript_include_tag "vendor/modernizr" %>
+	<%= csrf_meta_tags %>
+  <%= include_gon %>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCItTPwLzzWPxyI8RlS9sHQYyGDDu66c-Y"> </script>
+	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </head>
 <body>
-
 <%= yield %>
-
+<%= javascript_include_tag "application" %>
 </body>
 </html>
