Add div map-container to surround map-canvas in index view

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,4 +1,6 @@
-<div id="map-canvas"></div>
+<div id="map-container">
+    <div id="map-canvas"></div>
+</div>
 <!-- <div id="chart_div"> -->
   <!--<script type="text/javascript">
 
