--- a/app/assets/stylesheets/schools.css
+++ b/app/assets/stylesheets/schools.css
@@ -1,16 +1,31 @@
-html, body { height: 100%; margin: 0; padding: 0;}
+html, body, { height: 100%; margin: 0; padding: 0;}
 
-
-#map-canvas { height: 400px;
+/*
+#map-container { height: 400px;
  border-radius: 16px 16px;
  border-color: #fff;
  border-style: solid;
  box-shadow: 2px 2px 10px #B1B1B1;
  margin-top: 25px;
  border-width: 7px;
-}
+}*/
+
 
 #map-canvas {
- height: 384px;
+ height: 400px;
  width: 100%;
+}
+
+/*fix zoom bar distortion problem*/
+#map-canvas *, #map-canvas *:before, #map-canvas *:after {
+    -moz-box-sizing: content-box!important;
+    -webkit-box-sizing: content-box!important;
+    box-sizing: content-box!important;  
+}
+#map-canvas img {
+    max-width: none;
+}
+#map-canvas label {
+    width: auto;
+    display: inline;
 }
