--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,16 +4,52 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
+	<title><%= content_for?(:title) ? yield(:title) : "NYC High School Programs" %></title>
 
 	<%= stylesheet_link_tag    "application" %>
 	<%= javascript_include_tag "vendor/modernizr" %>
 	<%= csrf_meta_tags %>
   <%= include_gon %>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCItTPwLzzWPxyI8RlS9sHQYyGDDu66c-Y"> </script>
-	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+	<!-- // <script src="https://maps.googleapis.com/maps/api/js"></script> -->
+	<script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer.js" type="text/javascript"></script>
 </head>
 <body>
+	<nav class="top-bar" data-topbar role="navigation">
+	  <ul class="title-area">
+	    <li class="name">
+	      <h1><a href="#">NYC Public High School Programs</a></h1>
+	    </li>
+	     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+	    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+	  </ul>
+	  <section class="top-bar-section">
+
+	    <!-- Right Nav Section -->
+	    <ul class="right">
+	    	<li class="has-form">
+  				<div class="row collapse">
+	    			<div class="large-8 small-9 columns">
+	      			<input type="text" placeholder="Find Stuff">
+	    			</div>
+	    			<div class="large-4 small-3 columns">
+	      			<a href="#" class="alert button expand">Search</a>
+	    			</div>
+					</div>
+				</li>
+	      <li class="active"><a href="#">Right Button Active</a></li>
+	      <li class="has-dropdown">
+	        <a href="#">Right Button Dropdown</a>
+	        <ul class="dropdown">
+	          <li><a href="#">First link in dropdown</a></li>
+	          <li class="active"><a href="#">Active link in dropdown</a></li>
+	        </ul>
+	      </li>
+	    </ul>
+
+	    <!-- Left Nav Section -->
+	  </section>
+	</nav>
 <%= yield %>
 <%= javascript_include_tag "application" %>
 </body>
