--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,12 @@
  *= require foundation_and_overrides
 
  */
+
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#results {z-index: 2; background-color: #FFFFE6;}
