Comment out nav bar - focusing on map and making it functional for now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
   <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
 </head>
 <body>
-	  <div class="row">
+<!-- 	  <div class="row">
       <div class="large-3 columns">
-        <!-- <h1><img src="http://placehold.it/400x100&text=Logo"></h1> -->
-      </div>
+ -->        <!-- <h1><img src="http://placehold.it/400x100&text=Logo"></h1> -->
+      <!-- </div>
       <div class="large-9 columns">
         <ul class="button-group right">
           <li><a href="/" class="button">home</a></li>
@@ -27,7 +27,7 @@
         </ul>
       </div>
     </div>
-
+ -->
 <%= yield %>
 <%= javascript_include_tag "application" %>
 <footer class="row">
