--- a/app/assets/stylesheets/schools.scss
+++ b/app/assets/stylesheets/schools.scss
@@ -1,30 +1,65 @@
-
-/*
-#map-container { height: 400px;
- border-radius: 16px 16px;
- border-color: #fff;
- border-style: solid;
- box-shadow: 2px 2px 10px #B1B1B1;
- margin-top: 25px;
- border-width: 7px;
-}*/
-
-
-#map-canvas {
- height: 900px;
+#map {
  width: 100%;
+ position:absolute;
+ top:0; 
+ bottom:0; 
 }
 
 /*fix zoom bar distortion problem*/
-#map-canvas *, #map-canvas *:before, #map-canvas *:after {
+#map *, #map *:before, #map *:after {
     -moz-box-sizing: content-box!important;
     -webkit-box-sizing: content-box!important;
     box-sizing: content-box!important;  
 }
-#map-canvas img {
-    max-width: none;
+
+#map img {
+  max-width: none;
 }
-#map-canvas label {
-    width: auto;
-    display: inline;
+
+#map label {
+  width: auto;
+  display: inline;
+}
+
+.menu-ui {
+  background:#fff;
+  position:absolute;
+  top:100px;left:10px;
+  z-index:1;
+  border-radius:3px;
+  width:120px;
+  border:1px solid rgba(0,0,0,0.4);
+  }
+  .menu-ui a {
+    font-size:13px;
+    color:#404040;
+    display:block;
+    margin:0;padding:0;
+    padding:10px;
+    text-decoration:none;
+    border-bottom:1px solid rgba(0,0,0,0.25);
+    text-align:center;
+    }
+    .menu-ui a:first-child {
+      border-radius:3px 3px 0 0;
+      }
+    .menu-ui a:last-child {
+      border:none;
+      border-radius:0 0 3px 3px;
+      }
+    .menu-ui a:hover {
+      background:#f8f8f8;
+      color:#404040;
+      }
+    .menu-ui a.active,
+    .menu-ui a.active:hover {
+      background:#3887BE;
+      color:#FFF;
+      }
+
+.search-form {
+	position:fixed;
+	z-index:1;
+	right:10px;
+	top:10px
 }
