--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,11 +16,6 @@
 
  */
 
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
+body { margin:0; padding:0; }
 
-#results {z-index: 2; background-color: #FFFFE6;}
+/*#results {z-index: 2; background-color: #FFFFE6;}*/
