Add menu-ui nav with filtering for types of schools, add output element for mapbox geocoder, add marker-list element, add search-form element

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,1 +1,32 @@
-<div id="map-canvas"></div>
+<!-- <div class="sidebar">
+	<div class="large-3 pull-9 columns">
+		<ul class="side-nav">
+			<li><a href="#">Section 1</a></li>
+			<li><a href="#">Section 2</a></li>
+			<li><a href="#">Section 3</a></li>
+			<li><a href="#">Section 4</a></li>
+			<li><a href="#">Section 5</a></li>
+			<li><a href="#">Section 6</a></li>
+		</ul>
+	</div>
+</div> -->
+<form class="search-form">
+	<input class="search-field" type="text" />
+</form>
+
+<nav id='menu-ui' class='menu-ui'>
+  <a href='#' class='active' id='filter-all'>All schools</a>
+  <a href='#' id='filter-new-schools'>New schools</a>
+  <a href='#' id='filter-consortium-schools'>Consortium schools</a>
+  <a href='#' id='filter-cte-schools'>CTE schools</a>
+  <a href='#' id='filter-all-girls-schools'>All-Girls schools</a>
+  <a href='#' id='filter-international-schools'>International schools</a>
+  <a href='#' id='filter-specialized-schools'>Specialized schools</a>
+  <a href='#' id='filter-p-tech-schools'>NYC P-Tech 9-14, New School</a>
+  <a href='#' id='filter-all-boys-schools'>All Boys Schools</a>
+</nav>
+
+<div id="map"></div>
+
+<pre id='output' class='ui-output'></pre>
+<ul id='marker-list'></ul>
