--- a/app/assets/stylesheets/schools.scss
+++ b/app/assets/stylesheets/schools.scss
@@ -27,35 +27,35 @@
   top:100px;left:10px;
   z-index:1;
   border-radius:3px;
-  width:120px;
+  width:300px;
   border:1px solid rgba(0,0,0,0.4);
   }
-  .menu-ui a {
-    font-size:13px;
-    color:#404040;
-    display:block;
-    margin:0;padding:0;
-    padding:10px;
-    text-decoration:none;
-    border-bottom:1px solid rgba(0,0,0,0.25);
-    text-align:center;
-    }
-    .menu-ui a:first-child {
-      border-radius:3px 3px 0 0;
-      }
-    .menu-ui a:last-child {
-      border:none;
-      border-radius:0 0 3px 3px;
-      }
-    .menu-ui a:hover {
-      background:#f8f8f8;
-      color:#404040;
-      }
-    .menu-ui a.active,
-    .menu-ui a.active:hover {
-      background:#3887BE;
-      color:#FFF;
-      }
+.menu-ui a {
+  font-size:13px;
+  color:#404040;
+  display:block;
+  margin:0;padding:0;
+  padding:10px;
+  text-decoration:none;
+  border-bottom:1px solid rgba(0,0,0,0.25);
+  text-align:center;
+  }
+.menu-ui a:first-child {
+  border-radius:3px 3px 0 0;
+  }
+.menu-ui a:last-child {
+  border:none;
+  border-radius:0 0 3px 3px;
+  }
+.menu-ui a:hover {
+  background:#f8f8f8;
+  color:#404040;
+  }
+.menu-ui a.active,
+.menu-ui a.active:hover {
+  background:#3887BE;
+  color:#FFF;
+  }
 
 .search-form {
 	position:fixed;
@@ -64,23 +64,23 @@
 	top:10px
 }
 
- #marker-list {
-      position:absolute;
-      top:100px; right:0; width:200px;
-      bottom:0;
-      overflow-x:auto;
-      background:#fff;
-      margin:0;
-      padding:5px;
-  }
-  #marker-list li {
-      padding:5px;
-      margin:0;
-      list-style-type:none;
-  }
-  #marker-list li:hover {
-      background:#eee;
-  }
+#marker-list {
+    position:absolute;
+    top:100px; right:0; width:200px;
+    bottom:0;
+    overflow-x:auto;
+    background:#fff;
+    margin:0;
+    padding:5px;
+}
+#marker-list li {
+    padding:5px;
+    margin:0;
+    list-style-type:none;
+}
+#marker-list li:hover {
+    background:#eee;
+}
 
   pre.ui-output {
     display:block;
@@ -100,3 +100,21 @@
     white-space:pre-wrap;
     }
     pre.ui-output:empty { padding:0; }
+
+#loader {
+    position:absolute; top:0; bottom:0; width:100%;
+    background:rgba(255, 255, 255, 1);
+    transition:background 1s ease-out;
+    -webkit-transition:background 1s ease-out;
+}
+#loader.done {
+    background:rgba(255, 255, 255, 0);
+}
+#loader.hide {
+    display:none;
+}
+#loader .message {
+    position:absolute;
+    left:50%;
+    top:50%;
+}
