Add li div to be appended to filters div

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -4,7 +4,7 @@
 </form>
 
 <nav id='menu-ui' class='menu-ui'>
-	<nav id='filters' class='filter-ui'></nav>
+	<ul id='filters' class='side-nav'></ul>
 </nav>
 
 <div id="map"></div>
