Add button 'Add Programs'

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -11,4 +11,4 @@
 
 <pre id='output' class='ui-output'></pre>
 <!-- <ul id='marker-list'></ul> -->
-
+<input type='button' id='programs' class='button' value='Add programs' name='programs' />
