Make toggle text all lowercase

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -19,17 +19,17 @@
 		<h2 class='fancy'>visualize-HS</h2>
 		<div class='rounded-toggle inline'>
 			<input id='types' type='radio' name='rtoggle' value='types' checked='checked'>
-  		<label for='types'>Filter by school types</label>
+  		<label for='types'>filter by school types</label>
   		<input id='programs' type='radio' name='rtoggle' value='programs'>
-  		<label for='programs'>Filter by programs</label>
+  		<label for='programs'>filter by programs</label>
   		<input id='visualizations' type='radio' name='rtoggle' value='visualizations'>
-  		<label for='visualizations'>Fun visualizations</label>
+  		<label for='visualizations'>fun visualizations</label>
 		</div>
 
 		<!-- <input type='button' id='programs' class='button stroke loud' value='Add programs' name='programs'/> -->
 		<div id='filters' class='side-nav'></div>
-
 		<pre id='output' class='ui-output'></pre>
+	
 
 	</div>
 <!-- </div> -->
