--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -13,23 +13,21 @@
 	<div id="map"></div>
 </div>
 
-<div class='pin-right pad2'>
-	<a href='#menu' class='button stroke'>Menu</a>
-</div>
-
-<div id='menu' class='col5 pad2 fill-darken2 pin-left offcanvas-left'>
+<div id='menu' class='col5 pad2 fill-darken2 pin-left'>
 	<h1 class='fancy'>visualize-HS</h1>	
 	<br>
 	<br>
 	<br>
 	<div class='rounded-toggle inline'>
 		<a href="/" class='icon home'></a>
-		<input id='typesToggle' type='radio' name='rtoggle' value='types' checked='checked'>
+		<input id='listToggle' type='radio' name='rtoggle' value='types' checked='checked'>
+		<label for='listToggle'>all</label>
+		<input id='typesToggle' type='radio' name='rtoggle' value='types'>
 		<label for='typesToggle'>filter by school types</label>
 		<input id='programsToggle' type='radio' name='rtoggle' value='programs'>
 		<label for='programsToggle'>filter by programs</label>
-		<input id='visualizationsToggle' type='radio' name='rtoggle' value='visualizations'>
-		<label for='visualizationsToggle'>fun visualizations</label>
+<!-- 		<input id='visualizationsToggle' type='radio' name='rtoggle' value='visualizations'>
+		<label for='visualizationsToggle'>fun visualizations</label> -->
 	</div>
 	<!-- <input type='button' id='programs' class='button stroke loud' value='Add programs' name='programs'/> -->
 	<div id='filters'></div>
