--- a/app/assets/stylesheets/schools.scss
+++ b/app/assets/stylesheets/schools.scss
@@ -21,12 +21,7 @@
   display: inline;
 }
 
-.search-form {
-	position:fixed;
-	z-index:1;
-	right:10px;
-	top:10px
-}
+
 
 .filter-ui {
   background:#fff;
@@ -40,4 +35,6 @@
 
 #menu {
   left: 20px;
+  overflow:auto;
+  
 }
