Move search bar to menu

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -2,12 +2,7 @@
 
 <!-- <div class='col12 pad4 contain fill-navy dark clip'> -->
 
-<form class="search-form">
-	<fieldset class='with-icon'>
-		<span class='icon search'></span>
-		<input type='text' value='' />
-	</fieldset>
-</form>
+
 
 <div class='center quiet'>
 	<div id="map"></div>
@@ -18,6 +13,7 @@
 	<br>
 	<br>
 	<br>
+
 	<div class='rounded-toggle inline'>
 		<a href="/" class='icon home'></a>
 		<input id='listToggle' type='radio' name='rtoggle' value='types' checked='checked'>
@@ -29,6 +25,12 @@
 <!-- 		<input id='visualizationsToggle' type='radio' name='rtoggle' value='visualizations'>
 		<label for='visualizationsToggle'>fun visualizations</label> -->
 	</div>
+	<form class="search-form">
+		<fieldset class='with-icon'>
+			<span class='icon search'></span>
+			<input type='text' value='search' />
+		</fieldset>
+	</form>
 	<!-- <input type='button' id='programs' class='button stroke loud' value='Add programs' name='programs'/> -->
 	<div id='filters'></div>
 
