ADd divs for markers-list and types-list, instead of creating these with js

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -32,7 +32,10 @@
 		</fieldset>
 	</form>
 	<!-- <input type='button' id='programs' class='button stroke loud' value='Add programs' name='programs'/> -->
-	<div id='filters'></div>
+	<div id='filters'>
+		<div id="markers-list" class="pill"></div>
+		<div id="types-list" class="pill"></div>
+	</div>
 
 </div>
 <!-- </div> -->
