--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,9 +1,5 @@
 <div id='loader'><span class='message'>loading</span></div>
 
-<!-- <div class='col12 pad4 contain fill-navy dark clip'> -->
-
-
-
 <div class='center quiet'>
 	<div id="map"></div>
 </div>
@@ -23,7 +19,7 @@
 			<input id='typesToggle' type='radio' name='rtoggle' value='types'>
 			<label for='typesToggle'>filter by school types</label>
 			<input id='programsToggle' type='radio' name='rtoggle' value='programs'>
-			<label for='programsToggle'>filter by programs</label>
+			<label for='programsToggle'>filter by interest area</label>
 <!-- 		<input id='visualizationsToggle' type='radio' name='rtoggle' value='visualizations'>
 	<label for='visualizationsToggle'>fun visualizations</label> -->
 </div>
@@ -35,14 +31,12 @@
 			<input type='text' value='search' />
 		</fieldset>
 	</form>
-	<!-- <input type='button' id='programs' class='button stroke loud' value='Add programs' name='programs'/> -->
-	
 	<div id="markers-list" class="pill"></div>
 	<div id="types-list" class="pill"></div>
+	<div id="interest-areas-list" class="pill"></div>
 </div>
 
 </div>
-<!-- </div> -->
 
 
 
