Add styling for popup and nested info, right-arrow, and type divs

--- a/app/assets/stylesheets/schools.scss
+++ b/app/assets/stylesheets/schools.scss
@@ -34,6 +34,7 @@
 #menu {
   left: 20px;
   overflow:auto;
+
 }
 
 a {
@@ -47,4 +48,48 @@ a {
 
 #top-of-menu {
   z-index: 2;
+}
+
+.popup {
+  font-family:'Quicksand Book', Arial, sans-serif;
+  color:#fff;
+  cursor:pointer;
+  overflow:auto;
+}
+
+.popup .info {
+  width:69%;
+  margin-left:5%;
+}
+
+.popup .info,.popup .right-arrow {
+  float:left
+}
+
+.popup .right-arrow {
+  position:relative;
+  margin-top:6%;
+  right:-5px;
+  height:40px
+}
+
+.popup .info .popup-title {
+  font-size:20px;
+  line-height:1.1em;
+  margin-bottom:2px;
+  text-transform:uppercase;
+  color:#1299b8
+}
+
+.popup .info p {
+  line-height:1em;
+}
+
+.popup .type {
+  width:16%
+}
+
+.popup .type p {
+  height:37px;
+  float:right
 }
