--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,17 +1,20 @@
 <div id='loader'><span class='message'>loading</span></div>
 
+
+
 <div class='center quiet'>
 	<div id="map"></div>
 </div>
 
 <div id='menu' class='col5 pad2 fill-darken2 pin-left'>
 	<div id="top-of-menu">
+		
 		<h1 id="title" class='fancy'>visualize-HS
 		</h1>	
 		<br>
 		<br>
 		<br>
-
+		
 		<div id="toggle" class='rounded-toggle inline'>
 			<a href="/" class='icon home'></a>
 			<input id='listToggle' type='radio' name='rtoggle' value='types' checked='checked'>
@@ -34,6 +37,15 @@
 	<div id="markers-list" class="pill"></div>
 	<div id="types-list" class="pill"></div>
 	<div id="interest-areas-list" class="pill"></div>
+	<footer>
+		<p>2014 <a href="#" id="about" data-reveal-id="aboutModal">visualize-hs</a></p>
+		<p><a>feedback</a></p>
+	</footer>
+</div>
+
+<div id="aboutModal" class="reveal-modal" data-reveal>
+  <h2>about visualize-hs.</h2>
+  <a class="close-reveal-modal">&#215;</a>
 </div>
 
 </div>
