Add filter by performance to toggle - does not do anything yet

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -21,6 +21,8 @@
 				<label for='typesToggle'>filter by school types</label>
 				<input id='programsToggle' type='radio' name='rtoggle' value='programs'>
 				<label for='programsToggle'>filter by interest area</label>
+				<input id='performanceToggle' type='radio' name='rtoggle' value='performance'>
+				<label for='performanceToggle'>filter by performance</label>
 			</div>
 		</div>
 	</div>
