Change from 'all' to 'all schools' on toggle bar

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -16,7 +16,7 @@
 			<div id="toggle" class='rounded-toggle inline'>
 				<a href="/" class='icon home'></a>
 				<input id='listToggle' type='radio' name='rtoggle' value='types' checked='checked'>
-				<label for='listToggle'>all</label>
+				<label for='listToggle'>all schools</label>
 				<input id='typesToggle' type='radio' name='rtoggle' value='types'>
 				<label for='typesToggle'>filter by school types</label>
 				<input id='programsToggle' type='radio' name='rtoggle' value='programs'>
