Add filter=list div

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -36,6 +36,7 @@
 		<div id="markers-list" class="pill"></div>
 		<div id="types-list" class="pill"></div>
 		<div id="interest-areas-list" class="pill"></div>
+		<div id="filtered-list" class="pill"></div>
 	</div>
 	<footer>
 		<p>2014 <a href="#" id="about" data-reveal-id="aboutModal">visualize-hs</a></p>
