add div for geolocate link - its in the sidebar right now - needs to be moved

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -4,14 +4,17 @@
 	<div id="map"></div>
 </div>
 
+
 <div id='sidebar' class='col5 pad2 fill-darken2 pin-left'>
 	<div id="top-section">
-		
+			
 		<h1 id="title" class='fancy'>visualize-HS
 		</h1>	
 		<br>
 		<br>
 		<br>
+		<a href='#' id='geolocate'><p class='icon compass'></p></a>
+
 		<div id="toggleBar">
 			<div id="toggle" class='rounded-toggle inline'>
 				<a href="/" class='icon home'></a>
