Set modal that appears at start to not active

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class='col12'>
 	<div class='contain'>
-		<div id='modal-content' class='animate modal modal-content active'>
+		<div id='modal-content' class='animate modal modal-content'>
 			<form id='modal-name' class='modal-popup' method='post'>
 				<div class='col6 modal-body fill-white contain'>
 					<a href='#close' class='quiet pad1 icon fr close dark'></a>
@@ -25,7 +25,6 @@
 	<div class='center'>
 		<div id="map"></div>
 	</div>
-
 
 	<div id='sidebar' class='col5 pin-left'>
 		<div id="top-section">
