Add search bar to separate toggle - no longer in the view all schools toggle - planning to build it out with pg_search

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -40,7 +40,9 @@
 				<div id="toggle" class='rounded-toggle inline quiet'>
 					<a href="/" class='icon home'></a>
 					<input id='listToggle' type='radio' name='rtoggle' value='types' checked='checked'>
-					<label for='listToggle'>all schools</label>
+					<label for='listToggle'>view all schools</label>
+					<input id='searchToggle' type='radio' name='rtoggle' value='search'>
+					<label for='searchToggle'>search</label>
 					<input id='typesToggle' type='radio' name='rtoggle' value='types'>
 					<label for='typesToggle'>filter by school types</label>
 					<input id='programsToggle' type='radio' name='rtoggle' value='programs'>
@@ -51,12 +53,15 @@
 			</div>
 		</div>
 		<div id='filters'>
-			<form class="search-form">
-				<fieldset class='with-icon'>
-					<span class='icon search'></span>
-					<input type='text' value='search' />
-				</fieldset>
-			</form>
+			<div id="search-option">
+				<form class="search-form">
+					<fieldset class='with-icon'>
+						<span class='icon search'></span>
+						<input type='text' value='search' />
+					</fieldset>
+				</form>
+				<div id="search-results" class="pill"></div>
+			</div>
 			<div id="markers-list" class="pill"></div>
 			<div id="types-list" class="pill"></div>
 			<div id="interest-areas-list" class="pill"></div>
