Add headers for each filter section in filters toggle

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -67,9 +67,15 @@
 		<div id="markers-list" class="pill">
 		</div>
 		<div id='filters'>
-			<div id="types-list" class="pill">
-			</div>
+			<h3>school types</h3>
+			<div id="types-list" class="pill"></div>
+			<h3>interest areas</h3>
 			<div id="interest-areas-list" class="pill"></div>
+			<br>
+			<br>
+			
+			<h3>results (select to jump to school)</h3>
+
 			<div id="filtered-list" class="pill"></div>
 		</div>
 		<footer>
