Move h1 tag up one line

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -29,8 +29,7 @@
 	<div id='sidebar' class='col5 pin-left'>
 		<div id="top-section">
 			
-			<h1 id="title" class='fancy'>visualize-HS
-			</h1>	
+			<h1 id="title" class='fancy'>visualize-HS</h1>	
 			<br>
 			<br>
 			<br>
