Center toggleBar div, add styling for subtitle 'nyc' in title

--- a/app/assets/stylesheets/schools.scss
+++ b/app/assets/stylesheets/schools.scss
@@ -106,6 +106,12 @@ a {
   color:white;
 }
 
-#top-section {
+#toggleBar {
   text-align: center;
+}
+#subtitle {
+  padding-top:2%;
+  text-align: right;
+  color: white;
+  line-height: 0.5em;
 }
