Change text from visualize-hs to hs[blueprint] with subtitle 'nyc'

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -27,9 +27,11 @@
 	</div>
 
 	<div id='sidebar' class='col5 pin-left'>
-		<div id="top-section">
+		<div id="top-section">						
+			<h6 id="subtitle">nyc</h6>
 			
-			<h1 id="title" class='fancy'>visualize-HS</h1>	
+			<h1 id="title" class='fancy'>hs[blueprint]</h1>
+
 			<br>
 			<br>
 			<br>
