Change name from visualize-nyc to hs-blueprint

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -29,7 +29,7 @@
 	<div id='sidebar' class='col5 pin-left'>
 		<div id="top-section">						
 			<h6 id="subtitle">nyc</h6>
-			<h1 id="title" class='fancy'>visualize-hs</h1>
+			<h1 id="title" class='fancy'>hs[blueprint]</h1>
 
 			<br>
 			<br>
