Add fancy class to loading div

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,4 +1,4 @@
-<div id='loader'><span class='message'>loading</span></div>
+<div id='loader'><span class='message'><h1 class="fancy">loading</h1></span></div>
 
 <div class='col12'>
 	<div class='contain'>
