--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,8 @@ body { margin:0; padding:0; }
 
 #loader {
     position:absolute; top:0; bottom:0; width:100%;
-    background:rgba(255, 255, 255, 1);
+    background: #D1F0FF;
+    opacity: 0.75;
     transition:background 1s ease-out;
     -webkit-transition:background 1s ease-out;
 }
@@ -30,8 +31,9 @@ body { margin:0; padding:0; }
 #loader.hide {
     display:none;
 }
-#loader .message {
-    position:absolute;
-    left:50%;
-    top:50%;
+#loader img {
+	position: absolute;
+  top: 0; bottom:0; left: 0; right:0;
+  margin: auto;
+  width: 10em;
 }
