--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,4 +1,3 @@
-<div id='loader'><span class='message'>loading</span></div>
 
 <div class='col12'>
 	<div class='contain'>
@@ -30,7 +29,6 @@
 		<div id="top-section">						
 			<h6 id="subtitle">nyc</h6>
 			<h1 id="title" class='fancy'>hs[blueprint]</h1>
-
 			<br>
 			<br>
 			<br>
@@ -87,6 +85,9 @@
 	</div>
 </div>
 
+<div id='loader'>
+	<img src="http://i.imgur.com/GCNyjJY.gif" alt="	loading gif">
+</div>
 
 
 
