--- a/app/assets/stylesheets/schools.scss
+++ b/app/assets/stylesheets/schools.scss
@@ -21,6 +21,8 @@
   display: inline;
 }
 
+map .leaflet-popup-content{padding:6px 6px 5px}
+
 .filter-ui {
   background:#fff;
   position:absolute;
@@ -118,7 +120,17 @@ a {
 }
 
 .reveal-modal {
-  overflow-y: auto;
-  height: 100%;
-  position: fixed;
+  overflow-y: scroll;
+  overflow-x: auto;
+  position:fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  width:100%;
+  z-index:9999;
+  outline:0; 
+}
+
+.reveal-modal-bg {
 }
