Remove post method from form, add function to submit; add toggle button for specific location

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -2,7 +2,7 @@
 <div class='col12 mobile-cols'>
 	<div class='contain'>
 		<div id='modal-content' class='animate modal modal-content'>
-			<form id='modal-name' class='modal-popup' method='post'>
+			<form id='modal-name' class='modal-popup'>
 				<div class='col6 modal-body fill-white contain'>
 					<a href='#close' class='quiet pad1 icon fr close dark'></a>
 					<div class='fill-blue dark pad2y'>
@@ -14,7 +14,7 @@
 						</div>
 					</div>
 					<div class='fill-gray pad2y pad4x center clearfix'>
-						<input type='submit' class='col6 margin3' value='submit address' />
+						<input onclick="myFunction()" type='submit' class='col6 margin3' value='submit address' />
 					</div>
 				</div>
 			</form>
@@ -35,6 +35,8 @@
 
 			<div id="toggleBar">
 				<div id="toggle" class='rounded-toggle inline quiet'>
+					<input id='specificLocationToggle' type='radio' name='rtoggle' value='types'>
+					<label for='specificLocationToggle'>#</label>
 					<input id='listToggle' type='radio' name='rtoggle' value='types' checked='checked'>
 					<label for='listToggle'>view all</label>
 					<input id='searchToggle' type='radio' name='rtoggle' value='search'>
