Remove code for feature where user is prompted to enter a location in a modal and that is used to center map on tha tlocation - will likely add this back later but not right now

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -14,7 +14,7 @@
 						</div>
 					</div>
 					<div class='fill-gray pad2y pad4x center clearfix'>
-						<input onclick="myFunction()" type='submit' class='col6 margin3' value='submit address' />
+						<input type='submit' class='col6 margin3' value='submit address' />
 					</div>
 				</div>
 			</form>
@@ -35,8 +35,6 @@
 
 			<div id="toggleBar">
 				<div id="toggle" class='rounded-toggle inline quiet'>
-					<input id='specificLocationToggle' type='radio' name='rtoggle' value='types'>
-					<label for='specificLocationToggle'>#</label>
 					<input id='listToggle' type='radio' name='rtoggle' value='types' checked='checked'>
 					<label for='listToggle'>view all</label>
 					<input id='searchToggle' type='radio' name='rtoggle' value='search'>
