Modify form on search toggle to route correctly and have id and named input and placeholder

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -49,10 +49,10 @@
 		</div>
 		<div id="bottom-section" class="col12 clearfix prose">
 			<div id="search-option">
-				<form class="search-form col12 clearfix">
+				<form class="search-form col12 clearfix" method="get" action="/search">
 					<fieldset class='with-icon'>
 						<span class='icon search'></span>
-						<input type='text' value='search' />
+						<input name="search_text" id="search_text"type='text' placeholder="search school name/type OR program name/interest area" />
 					</fieldset>
 				</form>
 				<div id="search-results" class="pill col12 clearfix"></div>
@@ -90,6 +90,9 @@
 <div id='loader'>
 </div>
 
+
+<script type="text/javascript">
+</script>
 
 
 
