Fix overflow for links - its making strange lines on larger screen

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -1,11 +1,10 @@
 #sidebar {
   left: 20px;
-  overflow:auto;
-
+  overflow:scroll;
 }
 
 a {
-  overflow: auto;
+  overflow: hidden;
 }
 
 #filters {
